# orel_site

./: .gitignore  Dockerfile  celery_app.py  config.py  docker-compose.yml  main.py  models.py  parser.py  pyproject.toml  sitemap.py  utils.py
migrations/: env.py
migrations/versions/: 04e7ba75a08a_.py  1b3a228bf057_clear_data.py  3721b59a78d9_data.py  526795e416dd_data_migration.py  c84f9a755066_init.py
migrations/versions/data/: item.json
nginx/conf.d/: default.conf
templates/: base.html  detail.html  index.html  items.html  search_result.html
tests/: test_convert_currency.py  test_parser.py
