[project]
name = "titanium-parser"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "tqdm (>=4.67.1,<5.0.0)",
    "fastapi[standard] (>=0.127.0,<0.128.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "sqlmodel (>=0.0.31,<0.0.32)",
    "alembic (>=1.17.2,<2.0.0)",
    "cachetools (>=6.2.4,<7.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "celery[redis] (>=5.6.1,<6.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "sanitize-filename (>=1.2.0,<2.0.0)",
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
isort = "^7.0.0"
flake8 = "^7.3.0"
flake8-pyproject = "^1.2.4"
ruff = "^0.14.10"

